@@ -56,3 +56,4 @@ Authors ordered by first contribution
 - Frank Wickström <frank@bambuser.com>
 - George Karakostas <gckarakostas@gmail.com>
 - Adam Dobrawy <guardian@jawnosc.tk>
+- Michael England <michaelengland@outlook.com>
